<resources>
    <string name="app_name">My audio record sample</string>

    <string name="hello_world">Hello, this is story teller!</string>
    <string name="action_settings">Settings</string>
    <string name="record">Click to start recording.</string>
    <string name="recording">Recording, click to stop.</string>
    <string name="playback">Click to start playback.</string>
    <string name="playing">Playing, click to stop.</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="send">Send</string>
    <string name="wait">Wait</string>
    <string name="click_result">Click to get the text</string>
</resources>
