<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_record"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/record"/>
    <Button
        android:id="@+id/start_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickRecord"
        android:text="@string/start"/>
    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_playback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playback"/>
    <Button
        android:id="@+id/start_playback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickPlayBack"
        android:text="@string/start"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_result"/>
    <Button
        android:id="@+id/send_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:onClick="onClickSend"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="20sp"
        android:scrollbars="vertical"/>

</LinearLayout>
